<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:layout_marginBottom="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_username"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cv_user_list"
            app:layout_constraintStart_toStartOf="@+id/cv_user_list"
            app:layout_constraintTop_toTopOf="@+id/cv_user_list" />

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/phone_content_desc"
            app:layout_constraintStart_toStartOf="@+id/cv_user_list"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            app:srcCompat="@android:drawable/stat_sys_phone_call"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/placeholder_phone"
            style="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="@+id/cv_user_list"
            app:layout_constraintStart_toEndOf="@+id/phoneIcon"
            app:layout_constraintTop_toTopOf="@+id/phoneIcon" />

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/email_content_desc"
            app:layout_constraintStart_toStartOf="@+id/cv_user_list"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone"
            app:srcCompat="@android:drawable/sym_action_email"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/placeholder_email"
            style="@style/TextAppearance.AppCompat.Body1"

            app:layout_constraintEnd_toEndOf="@+id/cv_user_list"
            app:layout_constraintStart_toEndOf="@+id/emailIcon"
            app:layout_constraintTop_toTopOf="@+id/emailIcon" />

        <Button
            android:id="@+id/btn_see_posts"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/see_posts"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/cv_user_list"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>