<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.detail.UserDetailActivity">

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/placeholder_username"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/placeholder_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/placeholder_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_title_post_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="4dp"
        android:text="@string/post"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <View
        android:id="@+id/v_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_post_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_post_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/l_view_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_separator"
        tools:listitem="@layout/layout_card_post" />

    <include
        android:id="@+id/l_view_message"
        layout="@layout/layout_view_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>